--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,6 +15,9 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       -
+	name: Available platforms
+	run: echo ${{ steps.buildx.outputs.platforms }}
+      -
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
