--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Available platforms
+        name: Available
 	run: echo ${{ steps.buildx.outputs.platforms }}
       -
         name: Login to DockerHub
